msg/async: add a timer before connection open

Fixes: http://tracker.ceph.com/issues/37499

Signed-off-by: Xiaocheng Wang <wangxiaocheng@sangfor.com.cn>